--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,8 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-frontend/node_modules/
-frontend/votingsite/node_modules/
+node_modules/
+votingsite/node_modules/
 site/frontend/node_modules/
 ../backend/node_modules/
 dist
