--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ frontend/votingsite/node_modules/
 site/backend/node_modules/
 site/frontend/node_modules/
 backend/node_modules/
-dist
+dist/
 dist-ssr
 *.local
 
