--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
 	},
 	"dependencies": {
 		"react": "^19.1.1",
-		"react-dom": "^19.1.1"
+		"react-dom": "^19.1.1",
+		"socket.io-client": "^4.8.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.36.0",
@@ -22,8 +23,8 @@
 		"eslint": "^9.36.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.22",
+		"gh-pages": "^6.1.1",
 		"globals": "^16.4.0",
-		"vite": "^7.1.7",
-		"gh-pages": "^6.1.1"
+		"vite": "^7.1.7"
 	}
 }
