--- a/site/frontend/package.json
+++ b/site/frontend/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "election-sim-frontend",
-	"private": true,
+	"private": false,
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
