--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "votingsite",
-	"homepage": "https://james8103.github.io/",
+	"homepage": "https://james8103.github.io/vote",
 	"private": false,
 	"version": "0.0.0",
 	"type": "module",
