--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,24 +1,20 @@
 {
 	"name": "votingsite",
-	"homepage": "https://james8103.github.io/vote/",
-	"private": false,
 	"version": "1.0.0",
-	"type": "module",
+	"private": false,
+	"homepage": "https://james8103.github.io/vote/",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d dist"
+		"preview": "vite preview"
 	},
 	"dependencies": {
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"socket.io-client": "4.8.1"
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-react": "^4.2.0",
-		"gh-pages": "^6.1.1",
-		"vite": "^5.2.11"
+		"@vitejs/plugin-react": "^5.0.4",
+		"vite": "^7.2.0",
+		"gh-pages": "^6.1.1"
 	}
 }
