--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,14 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"react": "^19.1.1",
-		"react-dom": "^19.1.1"
+		"react-dom": "^19.1.1",
+		"socket.io-client": "^4.8.1"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "^5.0.4",
