--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d dist"
+		"deploy": "gh-pages -d dist -r https://github.com/james8103/vote.git"
 	},
 	"dependencies": {
 		"react": "^19.1.1",
