fixed .env mongodb link

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://vote-backend-jofd.onrender.com
-MONGO_URI=mongodb+srv://jameslavin81_db_user:NOOa1qGSZWqCqLHy@cluster0.8rcjccn.mongodb.net/vote?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://jameslavin81_db_user:NOOa1qGSZWqCqLHy@cluster0.8rcjccn.mongodb.net/vote?retryWrites=true&w=majority
